Remove mostly unused disable upgrade check bool
